2. Bugs and improvements in DvvData and CorrData to save large attribute to asdf
3. Added psd() method in CorrData to plot psd of the CorrData result.
4. Added plot() method in FFTData to plot the amplitude spectrum of the FFT results.
5. Improved plot() for DvvData with smoothing option.
6. Minor bug fixes and improvement for FFTData in merging and plotting.

NOISE:
1. Optimize memory usage for merge_chunks()

PLOTTING:
1. Added plot_psd() to plot the psd of an array (works with 1-d and 2-d array only for now.)
2. Updated plot_eventsequence() to have the option of plotting depth as the ydata.

UTILS:
1. Minor bug fixes in read_gmtlines()
2. Added psd() to get the power spectral density of an array

==================================================================
Updates in v0.6.3.1
1. Fixed the size issue when saving "time" to ASDF file. HDF file limits the attribute
  size to 64k or less. We split time to time_mean and np.float32(time) to reduce the size.
  This is a temporary fix. Hopefully HDF could lift the size limit for attributes.

==================================================================
Updates in v0.6.3
NOISE
1. Removed ncomp in do_correlation(). Setup a warning message if old usage is used.
2. Change defaults for acorr_only and xcorr_only both to False in do_correlation().
3. Added option to stack in merging(). This option could replace do_stacking() if no
  rotation. Renamed merging() to merge_pairs(). The old name is kept for compatibility.
4. Updated extract_corrdata() to read "side" attribute if available.
5. Added merge_chunks() to merge correlation files, to reduce the number of files, with
  the option for stacking.


DOWNLOADERS
1. Return inventory in get_event_waveforms()
2. Drop duplicates in get_sta_list() and fixed minor bug when channels might be skipped.
3. Change default region to globe in get_events()

UTILS
1. Added mag_duration(), modified from obspyDMT.utils.event_handler.py